# SwiftIOC-Automated-Threat-Intelligence-Collector

./: README.md  SECURITY.md  index.html  pyproject.toml  requirements.txt  sources.example.yml  swiftioc.py
.github/workflows/: ci.yml  codeql.yml  collect.yml  maintenance.yml
public/: index.html  index.md
public/assets/: dashboard.js  styles.css
public/diagnostics/: index.html  summary.html  summary.md
public/iocs/: latest.csv  latest.json  latest.jsonl  latest.tsv  stix2.json
scripts/: summarize_iocs.py
swiftioc/: __init__.py  __main__.py  cli.py  core.py
tests/: test_core.py
